project update; fix nav overlap

--- a/easybank-nextjs/src/styles/Header.module.css
+++ b/easybank-nextjs/src/styles/Header.module.css
@@ -86,7 +86,7 @@ header.topNavigation a {
     }
 }
 
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 1100px) {
     header.topNavigation {
         height: 4.5em;
     }
